                              #k <- iter
                              #}
                         #}
  o  fix a bug in nclreg.R: lambda.min.ratio was not used in computing lambda with glmreg_fit
  o  in nclreg.R, computing solution path stops if the numbers in exponential function become too big (infinite) 
     if(any(is.nan(h))){ # exit loop 
                    stopit <- TRUE
                    break
            }
  o  add type.init and relevant arguments in nclreg_fit function to have three types of initial parameters and lambda values
  o  replace fraction with lambda in cv.glmreg.R, cv.nclreg.R, cv.zipath.R and cv.glmregNB.R. This only affects the values of x-axis in plots, but not cross-validation results
  o  add type.path to have two different updating methods when computing solution paths 
               
               CHANGES in `mpath' VERSION 0.3-3 (08-17-2017)
  
  o  cycle through active set 
               
               CHANGES in `mpath' VERSION 0.3-4 (08-22-2017)
  
  o  add type="active" in R/nclreg_fit function
  o  fix a bug with cv.zipath when plot.it=TRUE
  o  add stopImplicitCluster() after registerDoParallel
               
               CHANGES in `mpath' VERSION 0.3-5 (10-17-2017)
  o  add vignette to illustrate classification of cancer patients with penalized robust nonconvex loss functions
  o  change zipath function to cycle through warm start. The results can be different from the previous versions.
  o  fix bugs with zipath when trace=TRUE and the zero component is an intercept-only model
               
               CHANGES in `mpath' VERSION 0.3-6 (10-04-2018)
  o  fix bugs when all elements of penalty.factor=0 in glmreg_fit or glmregNB. In this case, we set lambda=0 for each variable, and all penalty.factor=1. 
  o  fix bugs when all elements of penalty.factor.count=0 or penalty.factor.zero=0 in zipath. In this case, we set corresponding lambda = 0.
  o  fix bugs when activeset=NULL in nclreg function