@@ -131,3 +131,7 @@
   o  fix bugs when all elements of penalty.factor=0 in glmreg_fit or glmregNB. In this case, we set lambda=0 for each variable, and all penalty.factor=1. 
   o  fix bugs when all elements of penalty.factor.count=0 or penalty.factor.zero=0 in zipath. In this case, we set corresponding lambda = 0.
   o  fix bugs when activeset=NULL in nclreg function
+               
+               CHANGES in `mpath' VERSION 0.3-7 (01-26-2019)
+  o  changes were made to make offset in glmreg work. This includes changes in outloop.f, midloop.f, midloopGLM.f, lmnetGLM.
+  o  Changes were made in midloopGLM.f so that iterations run and check for convergency for b0 as well as beta  o  Changes were made in zipath to make offset work 
